--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,58 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 30px;
+}
+.main-btns{
+   margin-top: 20px;
+}
+.my-btn{
+    background-color: black;
+    color: white;
+    font-size: 30px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    transition: .1s;
+    margin: 2px;
+    border: 5px solid transparent;
+}
+.my-btn:hover{
+    background-color: white;
+    color: black;
+    border: 5px solid black;
+    cursor: pointer;
+}
+ 
+.main-title {
+    background-color: black;
+    color: white;
+    padding: 15px 0;
+    animation: colorChange 5s infinite;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@keyframes colorChange {
+    0% { color: wheat; }
+    10% { color: orange; }
+    20% { color: yellow; }
+    30% { color: green; }
+    40% { color: blue; }
+    50% { color: indigo; }
+    60% { color: violet; }
+    70% { color: pink; }
+    80% { color: cyan; }
+    90% { color: magenta; }
+    100% { color: red; }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.icons{
+    display: flex;
+    font-size: 55px;
+    justify-content: center;  
 }
-
-.card {
-  padding: 2em;
+.icons a{
+    margin: 0 15px;
 }
-
-.read-the-docs {
-  color: #888;
+.icons a:hover{
+   opacity: 0.5;
+    cursor: pointer;
 }
