--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body{
     border: none;
     border-radius: 5px;
     transition: .1s;
-    margin: 2px;
+    margin: 0 20px;
     border: 5px solid transparent;
 }
 .my-btn:hover{
